--- a/Simple Currency Converter/Convert all currencies/task-info.yaml
+++ b/Simple Currency Converter/Convert all currencies/task-info.yaml
@@ -165,5 +165,8 @@ files:
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/17899#comment
 check_profile: hyperskill_node_javascript
-status: Unchecked
+status: Solved
+feedback:
+  message: <html>Correct solution</html>
+  time: "Mon, 12 Jun 2023 07:40:12 UTC"
 record: -1
